2010-09-16  Gary V. Vaughan  <gary@gnu.org>

	maint: use bootstrap script from gnulib.
	* bootstrap: Replaced with gnulib script.
	* bootstrap.conf: New file with Libtool specific bootstrap
	configuration.

2010-09-23  Gary V. Vaughan  <gary@gnu.org>

	maint: use aux_dir consistently in all files.
	* Makefile.am, Makefile.maint: Replace all uses of auxdir
	with aux_dir to match AC_CONFIG_AUX_DIR.
	* libltdl/config/libtoolize.m4sh: Likewise.
	* tests/defs.m4sh, tests/getopt-m4sh.at: Likewise.

2010-09-24  Gary V. Vaughan  <gary@gnu.org>

	Makefile: try to be robust against shell meta-chars in filenames.
	* Makefile.am: In each rule body, unless a make variable needs
	to be seen as multiple words by the shell (for word-splitting
	loops, or because it contains several commands), quote it. Use
	single quotes unless the shell needs to perform variable inter-
	polation, in which case use double quotes.

	maint: let make employ user's `SED' setting.
	* Makefile.am: Replace hard-coded `sed' with `$(SED)' through-
	out.

2010-08-30  Gary V. Vaughan  <gary@gnu.org>

	maint: simplify and improve safety of bootstrap process.
	* Makefile.am (bootstrap_files): List files that need to be
	generated at bootstrap time before `./configure && make' can
	work.  It turns out that this is considerably fewer files than we
	had thought necessary previously.
	(bootstrap-deps-prep): Ensure minimum set of required substitution
	variables are non-empty.
	(bootstrap-deps): Depend on `bootstrap' files.
	* bootstrap (Generate bootstrap dependencies): Now that
	`Makefile.am' is entirely responsible for rebuilding files at
	bootstrap time, we need only specify the new `bootstrap-deps'
	target, and supply values for the substitutions checked by
	`bootstrap-deps-prep'.
	* configure.ac (AC_CONFIG_SRCDIR): `libtoolize.in' is not here yet
	right after running `bootstrap'.  So rely on the presence of
	`libtoolize.m4sh', which is always there.

2010-08-31  Gary V. Vaughan  <gary@gnu.org>
